--- a/views/index.pug
+++ b/views/index.pug
@@ -11,6 +11,14 @@ block content
       #navbarResponsive.collapse.navbar-collapse
         ul.navbar-nav.ml-auto
           li.nav-item
+            a.nav-link.js-scroll-trigger(href='login') Sign in
+          li.nav-item
+            a.nav-link.js-scroll-trigger(href='users/create') Sign up
+          li.nav-item
+            a.nav-link.js-scroll-trigger(href='bicycles') Bicycles
+          li.nav-item
+            a.nav-link.js-scroll-trigger(href='users') Users
+          li.nav-item
             a.nav-link.js-scroll-trigger(href='#about') About
           li.nav-item
             a.nav-link.js-scroll-trigger(href='#projects') Map
